[gd_scene load_steps=14 format=2]

[ext_resource path="res://Resources/Fonts/PixelText.tres" type="DynamicFont" id=1]
[ext_resource path="res://Resources/Themes/PixelTheme.tres" type="Theme" id=2]
[ext_resource path="res://Resources/Fonts/EncounterTextMedium.tres" type="DynamicFont" id=3]
[ext_resource path="res://Resources/Fonts/Pixel.tres" type="DynamicFont" id=4]
[ext_resource path="res://Resources/Shaders/TV.gdshader" type="Shader" id=5]
[ext_resource path="res://Prefabs/UI/TV.tscn" type="PackedScene" id=6]
[ext_resource path="res://Prefabs/UI/Pause/Pause.gd" type="Script" id=7]
[ext_resource path="res://Sprites/Backround/First Floor/PauseGround.png" type="Texture" id=8]
[ext_resource path="res://Prefabs/UI/Pause/Data/Data.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scenes/Main Menu/MenuButtons.gd" type="Script" id=10]
[ext_resource path="res://Resources/Themes/Styles/Slider/Slider.tres" type="StyleBox" id=11]
[ext_resource path="res://Prefabs/UI/Pause/Settings.gd" type="Script" id=12]

[sub_resource type="ShaderMaterial" id=1]
resource_local_to_scene = true
shader = ExtResource( 5 )
shader_param/overlay = true
shader_param/scanlines_opacity = 0.334
shader_param/scanlines_width = 0.182
shader_param/grille_opacity = 0.237
shader_param/resolution = Vector2( 640, 480 )
shader_param/pixelate = false
shader_param/roll = true
shader_param/roll_speed = 8.0
shader_param/roll_size = 48.139
shader_param/roll_variation = 2.139
shader_param/distort_intensity = 0.007
shader_param/noise_opacity = 0.142
shader_param/noise_speed = 5.0
shader_param/static_noise_intensity = 0.1
shader_param/aberration = 0.0
shader_param/brightness = 1.4
shader_param/discolor = false
shader_param/warp_amount = 0.04
shader_param/clip_warp = false
shader_param/vignette_intensity = 0.222
shader_param/vignette_opacity = 0.075

[node name="Pause" type="Control"]
pause_mode = 2
margin_right = 1920.0
margin_bottom = 1080.0
script = ExtResource( 7 )

[node name="Back" type="TextureRect" parent="."]
visible = false
margin_right = 1920.0
margin_bottom = 1075.0
texture = ExtResource( 8 )
expand = true

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1919.0
margin_bottom = 1080.0
color = Color( 0.109804, 0.0941176, 0.172549, 0.690196 )

[node name="TV" parent="." instance=ExtResource( 6 )]
material = SubResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 1919.0
margin_bottom = 1024.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 428.0
margin_top = 41.0
margin_right = 1490.0
margin_bottom = 982.0

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 1062.0
margin_bottom = 216.0
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 4 )
text = "STAY_TUNED"
align = 1

[node name="Label2" type="Label" parent="CenterContainer/VBoxContainer"]
margin_top = 220.0
margin_right = 1062.0
margin_bottom = 266.0
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 3 )
align = 1

[node name="Continue" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 270.0
margin_right = 1062.0
margin_bottom = 401.649
theme = ExtResource( 2 )
custom_colors/font_color_hover = Color( 0.0431373, 0.682353, 0.992157, 1 )
custom_colors/font_color_pressed = Color( 0.0431373, 0.682353, 0.992157, 1 )
custom_fonts/font = ExtResource( 1 )
text = "Continue"
flat = true

[node name="Settings" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 405.0
margin_right = 1062.0
margin_bottom = 536.649
theme = ExtResource( 2 )
custom_colors/font_color_hover = Color( 0.0431373, 0.682353, 0.992157, 1 )
custom_colors/font_color_pressed = Color( 0.0431373, 0.682353, 0.992157, 1 )
custom_fonts/font = ExtResource( 1 )
text = "Settings"
flat = true

[node name="Data" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 540.0
margin_right = 1062.0
margin_bottom = 671.649
theme = ExtResource( 2 )
custom_colors/font_color_hover = Color( 0.0431373, 0.682353, 0.992157, 1 )
custom_colors/font_color_pressed = Color( 0.0431373, 0.682353, 0.992157, 1 )
custom_fonts/font = ExtResource( 1 )
text = "Index"
flat = true

[node name="Abandon" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 675.0
margin_right = 1062.0
margin_bottom = 806.649
theme = ExtResource( 2 )
custom_colors/font_color_hover = Color( 0.0431373, 0.682353, 0.992157, 1 )
custom_colors/font_color_pressed = Color( 0.0431373, 0.682353, 0.992157, 1 )
custom_fonts/font = ExtResource( 1 )
text = "Abandon Run"
flat = true

[node name="Exit" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 810.0
margin_right = 1062.0
margin_bottom = 941.649
theme = ExtResource( 2 )
custom_colors/font_color_hover = Color( 0.0431373, 0.682353, 0.992157, 1 )
custom_colors/font_color_pressed = Color( 0.0431373, 0.682353, 0.992157, 1 )
custom_fonts/font = ExtResource( 1 )
text = "Exit"
flat = true

[node name="Data" parent="." instance=ExtResource( 9 )]
visible = false

[node name="Settings" type="Control" parent="."]
visible = false
margin_right = 1920.0
margin_bottom = 1080.0
script = ExtResource( 12 )

[node name="Name" type="Label" parent="Settings"]
modulate = Color( 2, 2, 2, 1 )
margin_left = 600.0
margin_right = 1320.0
margin_bottom = 216.0
custom_colors/font_color = Color( 0.843137, 0.768627, 0.654902, 1 )
custom_fonts/font = ExtResource( 4 )
text = "Settings"
align = 1
valign = 1

[node name="Volume" type="Label" parent="Settings"]
margin_left = 361.0
margin_top = 240.0
margin_right = 960.0
margin_bottom = 344.0
custom_fonts/font = ExtResource( 1 )
text = "Global Volume"
autowrap = true

[node name="VolumeSlider" type="HSlider" parent="Settings"]
margin_left = 976.0
margin_top = 288.0
margin_right = 1560.0
margin_bottom = 312.0
focus_neighbour_left = NodePath(".")
focus_neighbour_top = NodePath(".")
focus_neighbour_right = NodePath(".")
focus_neighbour_bottom = NodePath("../rus")
focus_next = NodePath("../rus")
focus_previous = NodePath(".")
custom_styles/slider = ExtResource( 11 )
max_value = 1.0
step = 0.05
value = 1.0

[node name="Sound" type="Label" parent="Settings"]
margin_left = 361.0
margin_top = 336.0
margin_right = 960.0
margin_bottom = 440.0
custom_fonts/font = ExtResource( 1 )
text = "Sound Effects Volume"
autowrap = true

[node name="SoundSlider" type="HSlider" parent="Settings"]
margin_left = 976.0
margin_top = 384.0
margin_right = 1560.0
margin_bottom = 408.0
focus_neighbour_left = NodePath(".")
focus_neighbour_top = NodePath(".")
focus_neighbour_right = NodePath(".")
focus_neighbour_bottom = NodePath("../rus")
focus_next = NodePath("../rus")
focus_previous = NodePath(".")
custom_styles/slider = ExtResource( 11 )
max_value = 1.0
step = 0.05
value = 1.0

[node name="Music" type="Label" parent="Settings"]
margin_left = 361.0
margin_top = 432.0
margin_right = 960.0
margin_bottom = 536.0
custom_fonts/font = ExtResource( 1 )
text = "Music Volume"
autowrap = true

[node name="MusicSlider" type="HSlider" parent="Settings"]
margin_left = 976.0
margin_top = 480.0
margin_right = 1560.0
margin_bottom = 504.0
focus_neighbour_left = NodePath(".")
focus_neighbour_top = NodePath(".")
focus_neighbour_right = NodePath(".")
focus_neighbour_bottom = NodePath("../rus")
focus_next = NodePath("../rus")
focus_previous = NodePath(".")
custom_styles/slider = ExtResource( 11 )
max_value = 1.0
step = 0.05
value = 1.0

[node name="Language" type="Label" parent="Settings"]
margin_left = 360.0
margin_top = 528.0
margin_right = 1080.0
margin_bottom = 632.0
custom_fonts/font = ExtResource( 1 )
text = "Language"

[node name="rus" type="Button" parent="Settings"]
margin_left = 450.0
margin_top = 638.0
margin_right = 776.0
margin_bottom = 770.0
focus_neighbour_left = NodePath(".")
focus_neighbour_top = NodePath("../VolumeSlider")
focus_neighbour_right = NodePath("../eng")
focus_neighbour_bottom = NodePath("../Confirm")
focus_next = NodePath(".")
focus_previous = NodePath(".")
theme = ExtResource( 2 )
custom_colors/font_color_focus = Color( 0.0431373, 0.682353, 0.992157, 1 )
custom_colors/font_color_hover = Color( 0.0431373, 0.682353, 0.992157, 1 )
custom_colors/font_color_pressed = Color( 0.0431373, 0.682353, 0.992157, 1 )
custom_fonts/font = ExtResource( 1 )
text = "Русский"
flat = true
align = 0
script = ExtResource( 10 )

[node name="eng" type="Button" parent="Settings"]
margin_left = 1200.0
margin_top = 638.0
margin_right = 1488.0
margin_bottom = 770.0
focus_neighbour_left = NodePath("../rus")
focus_neighbour_top = NodePath("../VolumeSlider")
focus_neighbour_right = NodePath(".")
focus_neighbour_bottom = NodePath("../Confirm")
focus_next = NodePath(".")
focus_previous = NodePath(".")
theme = ExtResource( 2 )
custom_colors/font_color_focus = Color( 0.0431373, 0.682353, 0.992157, 1 )
custom_colors/font_color_hover = Color( 0.0431373, 0.682353, 0.992157, 1 )
custom_colors/font_color_pressed = Color( 0.0431373, 0.682353, 0.992157, 1 )
custom_fonts/font = ExtResource( 1 )
text = "English"
flat = true
align = 0
script = ExtResource( 10 )

[node name="Label2" type="Label" parent="Settings"]
margin_left = 361.0
margin_top = 751.0
margin_right = 1081.0
margin_bottom = 852.0
custom_fonts/font = ExtResource( 1 )

[node name="Confirm" type="Button" parent="Settings"]
margin_left = 640.0
margin_top = 852.0
margin_right = 1024.0
margin_bottom = 984.0
focus_neighbour_left = NodePath(".")
focus_neighbour_top = NodePath("../rus")
focus_neighbour_right = NodePath("../Back")
focus_neighbour_bottom = NodePath(".")
focus_next = NodePath(".")
focus_previous = NodePath(".")
theme = ExtResource( 2 )
custom_colors/font_color_focus = Color( 0.0431373, 0.682353, 0.992157, 1 )
custom_colors/font_color_hover = Color( 0.0431373, 0.682353, 0.992157, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 1 )
text = "Confirm"
flat = true
align = 0
script = ExtResource( 10 )

[node name="Back" type="Button" parent="Settings"]
margin_left = 1088.0
margin_top = 852.0
margin_right = 1472.0
margin_bottom = 984.0
focus_neighbour_left = NodePath("../Confirm")
focus_neighbour_top = NodePath("../rus")
focus_neighbour_right = NodePath(".")
focus_neighbour_bottom = NodePath(".")
focus_next = NodePath(".")
focus_previous = NodePath(".")
theme = ExtResource( 2 )
custom_colors/font_color_focus = Color( 0.0431373, 0.682353, 0.992157, 1 )
custom_colors/font_color_hover = Color( 0.0431373, 0.682353, 0.992157, 1 )
custom_colors/font_color_pressed = Color( 0.0431373, 0.682353, 0.992157, 1 )
custom_fonts/font = ExtResource( 1 )
text = "Back"
flat = true
align = 0
script = ExtResource( 10 )

[connection signal="pressed" from="CenterContainer/VBoxContainer/Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Data" to="." method="_on_Data_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Abandon" to="." method="_on_Abandon_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
[connection signal="value_changed" from="Settings/VolumeSlider" to="Settings" method="_on_VolumeSlider_value_changed"]
[connection signal="value_changed" from="Settings/SoundSlider" to="Settings" method="_on_SoundSlider_value_changed"]
[connection signal="value_changed" from="Settings/MusicSlider" to="Settings" method="_on_MusicSlider_value_changed"]
[connection signal="button_down" from="Settings/rus" to="Settings" method="_on_rus_button_down"]
[connection signal="mouse_entered" from="Settings/rus" to="Settings/rus" method="_on_mouse_entered"]
[connection signal="button_down" from="Settings/eng" to="Settings" method="_on_eng_button_down"]
[connection signal="mouse_entered" from="Settings/eng" to="Settings/eng" method="_on_mouse_entered"]
[connection signal="button_down" from="Settings/Confirm" to="Settings" method="_on_Confirm_button_down"]
[connection signal="mouse_entered" from="Settings/Confirm" to="Settings/Confirm" method="_on_mouse_entered"]
[connection signal="button_down" from="Settings/Back" to="Settings" method="_on_Back_button_down"]
[connection signal="mouse_entered" from="Settings/Back" to="Settings/Back" method="_on_mouse_entered"]
